--- a/fruit.html
+++ b/fruit.html
@@ -7,12 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fruit|Game</title>
-  <link href="vendors/icofont/icofont.min.css" rel="stylesheet">
   <!----Style-->
   <link rel="stylesheet" type="text/css" href="css/game5.css">
   <link rel="stylesheet" type="text/css" href="css/app.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" type="text/css" href="css/game2.css">
+  <link rel="stylesheet" type="text/css" href="css/fruit.css">
   <link rel="icon" type="image/x-icon" href="./ImageGame/logo_new.png">
   <style>
     html {
@@ -66,6 +65,7 @@
       justify-content: space-between;
       align-items: center;
     }
+
     #trTitle td {
       text-align: center;
       color: white;
@@ -75,6 +75,7 @@
       text-align: center;
       color: white;
     }
+
     #trOe {
       text-align: center;
       color: white;
@@ -84,22 +85,16 @@
 
 <body>
   <!-- ======= Header ======= -->
-  <header id="header">
-    <div class="container" style="display: flex;justify-content: space-between;">
-      <div class="logo mr-auto d-md-block d-lg-none">
-        <a href="index.html"><img src="img/logo.png" alt="" class="img-fluid"></a>
-      </div>
-      <nav class="nav-menu d-none d-lg-block">
-        <ul>
-          <li><a href="index.html">5D Lotto</a></li>
-          <li><a href="wheel.html">Lucky Wheel</a></li>
-          <li><a href="start5.html">Star 5</a></li>
-          <li><a href="super99.html">Super 1/99</a></li>
-          <li class="active"><a href="fruit.html">Fruit</a></li>
-        </ul>
-      </nav>
+  <div class="nav-bar">
+    <div class="block-item">
+      <a href="index.html"><div class="menu-item bd-right-left">LUCKY 5D</div></a>
+      <a href="wheel.html"><div class="menu-item bd-right">THE WHEEL</div></a>
+      <a href="start5.html"><div class="menu-item bd-right">STAR 5</div></a>
+      <a href="super99.html"><div class="menu-item bd-right">SUPER 1/99</div></a>
+      <a href="fruit.html"><div class="menu-item bd-right active-menu">FRUIT</div></a>
     </div>
-  </header><!-- End Header -->
+
+  </div>
   <section id="section-result">
     <div class="row">
       <div class="col-md-6">
@@ -122,7 +117,7 @@
           </div>
         </div>
       </div>
-    </div>                        
+    </div>
     <div>
       <div class="row flex-content">
         <div class="col-md-6 content-fruit">
@@ -239,12 +234,11 @@
       </div>
     </div>
   </section>
-  <script src="vendors/jquery/jquery.min.js"></script>
-  <script src="vendors/jquery.easing/jquery.easing.min.js"></script>
-  <script src="vendors/jquery-sticky/jquery.sticky.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/7.0.2/signalr.min.js"></script>
-  <script src="js/script.js"></script>
-  <script src="js/game5.js"></script>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/7.0.2/signalr.min.js"></script>
+<script src="js/bootstrap.js"></script>
+<script src="js/jquery.js"></script>
+<script src="js/script.js"></script>
+<script src="js/fruit.js"></script>
 
 </html>
