--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>5D|Game</title> 
-  <link href="vendors/icofont/icofont.min.css" rel="stylesheet">
+  <title>5D|Game</title>
   <link rel="stylesheet" type="text/css" href="css/app.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" href="css/game1.css">
+  <link rel="stylesheet" href="css/5d.css">
   <link rel="icon" type="image/x-icon" href="./ImageGame/logo_new.png">
   <style>
     html {
@@ -35,23 +34,26 @@
 
 <body id="test1">
   <div class="hello3"></div>
-  <header id="header">
-    <div class="container" style="display: flex;justify-content: space-between;">
-      <div class="logo mr-auto d-md-block d-lg-none">
-        <a href="index.html"><img src="img/logo.png" alt="" class="img-fluid"></a>
-      </div>
-      <!-- <div class="fn-btn"><img src="img/Fn.svg" alt="" class="img-fluid" width="30"></div> -->
-      <nav class="nav-menu d-none d-lg-block">
-        <ul>
-          <li class="active"><a href="index.html">5D Lotto</a></li>
-          <li><a href="wheel.html">Lucky Wheel</a></li>
-          <li><a href="start5.html">Star 5</a></li>
-          <li><a href="super99.html">Super 1/99</a></li>
-          <li><a href="fruit.html">Fruit</a></li>
-        </ul>
-      </nav>
+  <div class="nav-bar">
+    <div class="block-item">
+      <a href="index.html">
+        <div class="menu-item bd-right-left active-menu">LUCKY 5D</div>
+      </a>
+      <a href="wheel.html">
+        <div class="menu-item bd-right">THE WHEEL</div>
+      </a>
+      <a href="start5.html">
+        <div class="menu-item bd-right">STAR 5</div>
+      </a>
+      <a href="super99.html">
+        <div class="menu-item bd-right">SUPER 1/99</div>
+      </a>
+      <a href="fruit.html">
+        <div class="menu-item bd-right">FRUIT</div>
+      </a>
     </div>
-  </header><!-- End Header -->
+
+  </div>
   <section id="section-result">
     <div class="">
       <div class="row">
@@ -301,16 +303,11 @@
       </div>
     </div>
   </section>
-  <!--==================Footer-->
-  <!--End footer-->
-  <script src="vendors/jquery/jquery.min.js"></script>
-  <script src="vendors/jquery.easing/jquery.easing.min.js"></script>
-  <script src="vendors/jquery-sticky/jquery.sticky.js"></script>
-  <!-- Template Main JS File -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/7.0.2/signalr.min.js"></script>
-  <script src="js/script.js"></script>
-  <script src="js/pager.js"></script>
-  <script src="js/timegame.js"></script>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/7.0.2/signalr.min.js"></script>
+<script src="js/jquery.js"></script>
+<script src="js/script.js"></script>
+<script src="js/pager.js"></script>
+<script src="js/5d.js"></script>
 
 </html>
