--- a/wheel.html
+++ b/wheel.html
@@ -8,11 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luck_Wheel|Game</title>
     <!-- Vendor CSS Files -->
-    <link href="vendors/icofont/icofont.min.css" rel="stylesheet">
     <!----Style-->
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <link rel="stylesheet" type=" text/css" href="css/style.css">
     <link rel="stylesheet" href="css/wheel.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="icon" type="image/x-icon" href="./ImageGame/logo_new.png">
     <style>
         html {
@@ -37,25 +37,17 @@
 </head>
 
 <body>
-    <header id="header">
-        <div class="container" style="display: flex;justify-content: space-between;">
-            <div class="logo mr-auto d-md-block d-lg-none">
-                <a href="index.html"><img src="img/logo.png" alt="" class="img-fluid"></a>
-            </div>
-            <!-- <div class="fn-btn"><img src="img/Fn.svg" alt="" class="img-fluid" width="30"></div> -->
-            <nav class="nav-menu d-none d-lg-block">
-                <ul>
-                    <li><a href="index.html">5D Lotto</a></li>
-                    <li class="active"><a href="wheel.html">Lucky Wheel</a></li>
-                    <li><a href="start5.html">Star 5</a></li>
-                    <li><a href="super99.html">Super 1/99</a></li>
-                    <li><a href="fruit.html">Fruit</a></li>
-                </ul>
-            </nav>
+    <div class="nav-bar">
+        <div class="block-item">
+          <a href="index.html"><div class="menu-item bd-right-left">LUCKY 5D</div></a>
+          <a href="wheel.html"><div class="menu-item bd-right active-menu">THE WHEEL</div></a>
+          <a href="start5.html"><div class="menu-item bd-right">STAR 5</div></a>
+          <a href="super99.html"><div class="menu-item bd-right">SUPER 1/99</div></a>
+          <a href="fruit.html"><div class="menu-item bd-right">FRUIT</div></a>
         </div>
-    </header><!-- End Header -->
-    <div class="container-fluid">
-
+    
+      </div>
+    <div class="container-back">
         <div class="container-flex">
             <div class="logo-brain">
                 <img class="img-logo-brain" src="img/fortune/logo-brain.png" alt="">
@@ -124,43 +116,16 @@
                 <div class="num">12</div>
                 <div class="colore black"></div>
             </div>
-            <div class="box-color">
-                <div class="num">34</div>
-                <div class="colore yellow"></div>
-            </div>
-            <div class="box-color">
-                <div class="num">12</div>
-                <div class="colore yellow"></div>
-            </div>
-            <div class="box-color">
-                <div class="num">34</div>
-                <div class="colore yellow"></div>
-            </div>
-            <div class="box-color">
-                <div class="num">12</div>
-                <div class="colore black"></div>
-            </div>
-            <div class="box-color">
-                <div class="num">34</div>
-                <div class="colore yellow"></div>
-            </div>
-            <div class="box-color">
-                <div class="num">34</div>
-                <div class="colore red"></div>
-            </div>
         </div>
     </div>
 
     <!--==================Footer-->
     <!--End footer-->
-    <script src="vendors/jquery/jquery.min.js"></script>
-    <script src="vendors/jquery.easing/jquery.easing.min.js"></script>
-    <script src="vendors/jquery-sticky/jquery.sticky.js"></script>
-    <!-- Template Main JS File -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/7.0.2/signalr.min.js"></script>
-    <script src="js/fortune.js"></script>
-    <script src="js/script.js"></script>
-
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/7.0.2/signalr.min.js"></script>
+<script src="js/bootstrap.js"></script>
+<script src="js/jquery.js"></script>
+<script src="js/wheel.js"></script>
+<script src="js/script.js"></script>
 
 </html>
